fix up some layout issues

--- a/src/css/_generic.scss
+++ b/src/css/_generic.scss
@@ -11,6 +11,7 @@
 a{text-decoration:none;color:$blue;}
 a:hover{text-decoration:underline;}
 a:focus{outline:1px dotted $blue;}
+a:visited {color:$blue;}
 ul, li{margin:0;padding:0;list-style:none;}
 
 h1,h2,h3,h4,h5,h6{
