--- a/src/css/_listing.scss
+++ b/src/css/_listing.scss
@@ -475,7 +475,7 @@
   background-color:$white;
   @include box-shadow(0 1px 3px $black + #666);
 
-
+  &:visited{color:#444;}
   &:hover{
     @include box-shadow(0 1px 6px $black + #555);
     text-decoration:none;
