--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -95,10 +95,6 @@ textarea {
    Links
    ========================================================================== */
 
-a:visited {
-    color: #551a8b;
-}
-
 /*
  * Improves readability when focused and also mouse hovered in all browsers
  * people.opera.com/patrickl/experiments/keyboard/test
